debathena-dotfiles (10.0.11-0debathena1) unstable; urgency=low

  * Remove VISUAL, term, and xresize from the standard dotfiles. (Trac:
    #151)

 -- Evan Broder <broder@mit.edu>  Thu, 14 May 2009 01:03:59 -0400

debathena-dotfiles (10.0.10-0debathena1) unstable; urgency=low

  * Run zwgc if you login to a dialup but have fallback=true set in
    .zephyr.vars. (Trac: #137)

 -- Evan Broder <broder@mit.edu>  Sun, 12 Apr 2009 01:01:10 -0400

debathena-dotfiles (10.0.9-0debathena3) unstable; urgency=low

  * Update dependencies for merge of debathena-from and
    debathena-mailquota into debathena-mitmailutils

 -- Evan Broder <broder@mit.edu>  Sun, 05 Apr 2009 11:56:50 -0400

debathena-dotfiles (10.0.9-0debathena2) unstable; urgency=low

  * Add /bin/athena/tcsh and /bin/athena/bash to the list of valid shells.

 -- Evan Broder <broder@mit.edu>  Tue, 10 Mar 2009 13:56:37 -0400

debathena-dotfiles (10.0.9-0debathena1) unstable; urgency=low

  * In bash, parse $PRINTER from the csh clusterinfo because it's easier.

 -- Evan Broder <broder@mit.edu>  Tue, 03 Mar 2009 14:24:09 -0500

debathena-dotfiles (10.0.8-0debathena1) unstable; urgency=low

  * Set $EMAIL in the system dotfiles.

 -- Tim Abbott <tabbott@mit.edu>  Sat, 31 Jan 2009 18:52:41 -0500

debathena-dotfiles (10.0.7-0debathena4) unstable; urgency=low

  * Remove DEB_AUTO_UPDATE_DEBIAN_CONTROL.
  * Change "Debian-Athena Project" to "Debathena Project".
  * Remove debian/control from version control.
  * Clean up debian/copyright.

 -- Tim Abbott <tabbott@mit.edu>  Sat, 24 Jan 2009 14:32:52 -0500

debathena-dotfiles (10.0.7-0debathena3) unstable; urgency=low

  * Use gnome-session-save for logout.

 -- Greg Hudson <ghudson@mit.edu>  Fri, 19 Sep 2008 17:59:57 -0400

debathena-dotfiles (10.0.7-0debathena2) unstable; urgency=low

  * Fix the handling of .path files in cshrc.

 -- Greg Hudson <ghudson@mit.edu>  Thu, 18 Sep 2008 18:04:13 -0400

debathena-dotfiles (10.0.7-0debathena1) unstable; urgency=low
