@@ -2,8 +2,9 @@ debathena-dotfiles (10.0.11-0debathena1) unstable; urgency=low
 
   * Remove VISUAL, term, and xresize from the standard dotfiles. (Trac:
     #151)
+  * Implement setup for bash. (Trac: #104)
 
- -- Evan Broder <broder@mit.edu>  Thu, 14 May 2009 01:03:59 -0400
+ -- Evan Broder <broder@mit.edu>  Thu, 14 May 2009 01:07:14 -0400
 
 debathena-dotfiles (10.0.10-0debathena1) unstable; urgency=low
 
